--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "trailerfin_rust"
-version = "1.0.1"
+version = "1.1.0"
 edition = "2021"
+rust-version = "1.87.0"
 
 [dependencies]
 config = { version = "0.15.11", features = ["serde_json"] }
@@ -15,11 +16,15 @@ tracing = "0.1.41"
 tokio = { version = "1.45.1", features = ["full"] }
 tokio-cron-scheduler = "0.14.0"
 anyhow = "1.0.98"
-lazy_static = "1.5.0"
+once_cell = "1.21.3"
+governor = { version = "0.10.0" }
 tempfile = "3.20.0"
 serde = { version = "1.0.219", features = ["derive"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 futures = "0.3.31"
+redb = "2.6.0"
+async-trait = "0.1.88"
+chrono = "0.4.41"
 
 [dev-dependencies]
 serial_test = "3.2.0"
