Change runner type in release workflow from ubuntu-latest to self-hosted for improved build environment consistency.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,7 +13,7 @@ env:
 jobs:
   # Build binaries for multiple platforms
   build-binaries:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         target:
