--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,14 +41,19 @@ jobs:
       - name: Install dependencies and Rust target
         run: |
           apt-get update
-          apt-get install -y musl-tools gcc-aarch64-linux-gnu
+          apt-get install -y musl-tools wget
           rustup target add ${{ matrix.target }}
 
-      - name: Configure linker (only for aarch64)
+      - name: Setup musl toolchain (only for aarch64)
         if: matrix.target == 'aarch64-unknown-linux-musl'
         run: |
+          wget https://musl.cc/aarch64-linux-musl-cross.tgz
+          tar -xf aarch64-linux-musl-cross.tgz
+          echo "$PWD/aarch64-linux-musl-cross/bin" >> $GITHUB_PATH
+          
+          # Configure cargo to use the new linker
           echo '[target.aarch64-unknown-linux-musl]' >> ~/.cargo/config.toml
-          echo 'linker = "aarch64-linux-gnu-gcc"' >> ~/.cargo/config.toml
+          echo 'linker = "aarch64-linux-musl-gcc"' >> ~/.cargo/config.toml
 
       - name: Run Tests
         if: matrix.target == 'x86_64-unknown-linux-musl'
