--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,13 +47,15 @@ jobs:
       - name: Setup musl toolchain (only for aarch64)
         if: matrix.target == 'aarch64-unknown-linux-musl'
         run: |
-          wget https://musl.cc/aarch64-linux-musl-cross.tgz
+          wget -q https://musl.cc/aarch64-linux-musl-cross.tgz
           tar -xf aarch64-linux-musl-cross.tgz
           echo "$PWD/aarch64-linux-musl-cross/bin" >> $GITHUB_PATH
           
-          # Configure cargo to use the new linker
-          echo '[target.aarch64-unknown-linux-musl]' >> ~/.cargo/config.toml
-          echo 'linker = "aarch64-linux-musl-gcc"' >> ~/.cargo/config.toml
+          # Set explicit environment variables for cross-compilation
+          echo "CC_aarch64_unknown_linux_musl=aarch64-linux-musl-gcc" >> $GITHUB_ENV
+          echo "CXX_aarch64_unknown_linux_musl=aarch64-linux-musl-g++" >> $GITHUB_ENV
+          echo "AR_aarch64_unknown_linux_musl=aarch64-linux-musl-ar" >> $GITHUB_ENV
+          echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=aarch64-linux-musl-gcc" >> $GITHUB_ENV
 
       - name: Run Tests
         if: matrix.target == 'x86_64-unknown-linux-musl'
